tests/neg-custom-args/captures/dcs-tvar.check
-- Error: tests/neg-custom-args/captures/dcs-tvar.scala:6:15 -----------------------------------------------------------
6 |  () => runOps(xs) // error
  |               ^^
  |               Local reach capability xs* leaks into capture scope of method f.
  |               To allow this, the parameter xs should be declared with a @use annotation
-- Error: tests/neg-custom-args/captures/dcs-tvar.scala:9:15 -----------------------------------------------------------
9 |  () => runOps(xs) // error
  |               ^^
  |               Local reach capability xs* leaks into capture scope of method g.
  |               To allow this, the parameter xs should be declared with a @use annotation
